--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='styles.css'/>
 </head>
 <body>
-    <h1>hi there you :)</h1>
+    <canvas id="screen" width="500" height="500"></canvas>
     <script src="bundle.js"></script>
 </body>
 </html>
